// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: PasswordTooltop renders 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 4,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/validCheck.png",
        }
      }
      style={
        Object {
          "height": 16,
          "marginRight": 4,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#25282D",
            },
            Object {
              "fontFamily": "Poppins-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0.004,
              "lineHeight": 16,
              "textAlign": "left",
            },
          ],
          Array [
            Object {
              "color": "#878787",
            },
            Object {
              "color": "#1EC490",
            },
          ],
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;

exports[`component: PasswordTooltop renders not satisfied style 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginVertical": 4,
      }
    }
  >
    <Image
      source={
        Object {
          "testUri": "../../../src/assets/images/check.png",
        }
      }
      style={
        Object {
          "height": 16,
          "marginRight": 4,
          "resizeMode": "contain",
          "width": 16,
        }
      }
    />
    <Text
      style={
        Array [
          Array [
            Object {
              "color": "#25282D",
            },
            Object {
              "fontFamily": "Poppins-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "fontWeight": "400",
              "letterSpacing": 0.004,
              "lineHeight": 16,
              "textAlign": "left",
            },
          ],
          Array [
            Object {
              "color": "#878787",
            },
            false,
          ],
        ]
      }
    >
      label
    </Text>
  </View>
</View>
`;
